<resources>
    <string name="hello">您好，移动世界！</string>
    <string name="app_name">SampleForMcommerce</string>
    <string name="planet_prompt">Choose a planet</string>
    <string name="taobao_Mcommerce_android">移动电子商务开发实践：http://code.google.com/p/taobao-sdk-for-android-platform/</string>
    <string name="radio_group_snack">Snack</string>
    <string name="radio_group_selection">"You have selected: "</string>
    <string name="radio_group_none">(none)</string>
    <string name="radio_group_1_breakfast">Breakfast</string>
    <string name="radio_group_1_lunch">Lunch</string>
    <string name="radio_group_1_dinner">Dinner</string>
    <string name="radio_group_1_all">All of them</string>
    <string name="radio_group_1_selection">You have selected: (none)</string>
    <string name="radio_group_1_clear">Clear</string>
    <string name="progressbar_1_plus">+</string>
    <string name="progressbar_1_minus">-</string>
    <string name="progressbar_1_default_progress">Default progress:</string>
    <string name="progressbar_1_secondary_progress">Secondary progress:</string>
    <string name="radio_button_0">Open Browser</string>
    <string name="radio_button_1">Call Someone</string>
    <string name="radio_button_2">Dial</string>
    <string name="radio_button_3">Show Map</string>
    <string name="radio_button_4">Search on Map</string>
    <string name="radio_button_5">Take picture</string>
    <string name="radio_button_6">Show contacts</string>
    <string name="radio_button_7">Edit first contact</string>
    <string name="hello_mobile_world">hello mobile world</string>
    <string name="image_view_large_normal">Large image at normal size</string>
    <string name="image_view_large_at_most">Large image scaled to at most 50x50</string>
    <string name="image_view_large_at_most_padded">Large image scaled to at most 70x70 with padding</string>
    <string name="image_view_large_exactly_padded">Large image scaled to exactly 70x70 with padding</string>
    <string name="image_view_small_normal">Small image at normal size</string>
    <string name="image_view_small_at_most">Small image scaled to at most 50x50</string>
    <string name="image_view_small_at_most_padded">Small image scaled to at most 70x70 with padding</string>
    <string name="image_view_small_exactly_padded">Small image scaled to exactly 70x70 with padding</string>
    <string name="redirect_getter">输入框中的内容将在下一个页面显示</string>
    <string name="apply">确定</string>
    <string name="redirect_main">你将看到上一页的信息</string>
    <string name="clear_text">清除</string>
    <string name="new_text">重新输入</string>
    <string name="insert">插入</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="show">显示</string>
    <string name="button_search">搜索</string>
    <string name="input_keyword">输入单词</string>
    <string name="directions">Press a button to hear a sound: Up, right, down, left, enter, A, S, D, or F.</string>
    <string name="city">城市:</string>
    <string name="nick">账号:</string>
    <string name="single_user">单个用户的解析</string>
    <string name="multi_user">多个用户的解析</string>
    <string name="single_user_dom">使用DOM解析单个用户</string>
    <string name="multi_user_dom">使用DOM解析</string>
    <string name="multi_user_pull">使用PULL解析</string>
    <string name="multi_user_sax">使用SAX解析</string>
    <string name="tablelayout1_name">Chapter03/Layout/Table Layout 1</string>
    <string name="tablelayout2_name">Chapter03/Layout/Table Layout 2</string>
    <string name="tablelayout3_name">Chapter03/Layout/Table Layout 3</string>
    <string name="linear_layout">Chapter03/Layout/Linear Layout</string>
    <string name="weightgrav_name">Chapter03/Layout/Weight Gravity</string>
    <string name="layout_gravity">Chapter03/Layout/Layout Gravity</string>
    <string name="padding_margin">Chapter03/Layout/Padding Margin</string>
    <string name="multiple_screen_1">Chapter03/multiple screen/density independence</string>
    <string name="DevelopingUIWithCoding">Chapter03/Developing UI/Coding</string>
    <string name="absolute_layout">Chapter03/Layout/Absolute Layout</string>
    <string name="frame_layout">Chapter03/Layout/Frame Layout</string>
    <string name="table_layout">Chapter03/Layout/Table Layout</string>
    <string name="relative_layout">Chapter03/Layout/Relative Layout</string>
    <string name="relativelayout_name">Chapter03/Layout/Relative Layout Demo</string>
    <string name="styles_name">Chapter03/Styles Demo</string>
    <string name="textView">Chapter04/Text/TextView</string>
    <string name="textview_name">Chapter04/Text/TextView Demo</string>
    <string name="textView_web">Chapter04/Text/TextView_Web</string>
    <string name="editText">Chapter04/Text/EditText</string>
    <string name="editText_search">Chapter04/Text/EditTextSearch</string>
    <string name="actionBar_tab">Chapter04/Action Bar/01</string>
    <string name="action_bar_mechanics">Chapter04/Action Bar/Action Bar Mechanics</string>
    <string name="action_bar_usage">Chapter04/Action Bar/Action Bar Usage</string>
    <string name="action_bar_tabs">Chapter04/Action Bar/Action Bar Tabs</string>
    <string name="action_bar_settings_action_provider">Chapter04/Action Bar/Action Provider/Settings Action Provider</string>
    <string name="action_bar_share_action_provider">Chapter04/Action Bar/Action Provider/Share Action Provider</string>
    <string name="action_bar_settings_action_provider_no_handling">Handling in onOptionsItemSelected avoided</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Alphabetically</string>
    <string name="action_bar_sort_size">By size</string>
    <string name="action_bar_share_with">Share with...</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_display_options">Chapter04/Action Bar/Display Options</string>
    <string name="toggle_home_as_up">DISPLAY_HOME_AS_UP</string>
    <string name="toggle_show_home">DISPLAY_SHOW_HOME</string>
    <string name="toggle_use_logo">DISPLAY_USE_LOGO</string>
    <string name="toggle_show_title">DISPLAY_SHOW_TITLE</string>
    <string name="toggle_show_custom">DISPLAY_SHOW_CUSTOM</string>
    <string name="toggle_navigation">Navigation</string>
    <string name="cycle_custom_gravity">Cycle Custom View Gravity</string>
    <string name="display_options_custom_button">Custom View!</string>
    <string name="display_options_menu_item">Menu Item</string>
    <string name="btn_add_tab">Add new tab</string>
    <string name="btn_remove_tab">Remove last tab</string>
    <string name="btn_toggle_tabs">Toggle tab mode</string>
    <string name="btn_remove_all_tabs">Remove all tabs</string>
    <string name="wiget_menu">Chapter04/Menu/SampleMenu</string>
    <string name="simple_event">Chapter04/SimpleEvent</string>
    <string name="IntentDataTransfer">Chapter04/Intent/DataTransfer</string>
    <string name="implicitIntent">Chapter04/Intent/ImplicitIntent</string>
    <string name="radioGroup">Chapter04/Button/RadioGroup</string>
    <string name="radio_name">Chapter04/Button/RadioGroup Demo</string>
    <string name="checkBox">Chapter04/Button/CheckBox</string>
    <string name="checkbox_name">Chapter04/Button/CheckBox Demo</string>
    <string name="button_name">Chapter04/Button/Button Demo</string>
    <string name="ImageView">Chapter04/ImageView</string>
    <string name="imageview_name">Chapter04/ImageView Demo</string>
    <string name="ListView">Chapter04/AdapterView/ListView</string>
    <string name="alart_dialog">Chapter04/AdapterView/AlartDialog</string>
    <string name="gallery_name">Chapter04/AdapterView/Gallery Demo</string>
    <string name="gridview_name">Chapter04/AdapterView/GridView Demo</string>
    <string name="gridviewcustom_name">Chapter04/AdapterView/GridView-Custom Adapter Demo</string>
    <string name="spinner_name">Chapter04/AdapterView/Spinner Demo</string>
    <string name="listview_name">Chapter04/AdapterView/ListView Demo</string>
    <string name="listview2_name">Chapter04/AdapterView/ListView Demo 2</string>
    <string name="listview3_name">Chapter04/AdapterView/ListView Demo 3</string>
    <string name="listview4_name">Chapter04/AdapterView/ListView Demo 4</string>
    <string name="listview5_name">Chapter04/AdapterView/ListView Demo 5</string>
    <string name="datetimepicker_name">Chapter04/Date/Time Picker Demo</string>
    <string name="frame_name">Frame Layout Demo</string>
    <string name="alarm">Chapter05/Alarm</string>
    <string name="broadcast">Chapter05/BroadCastReceiver/01</string>
    <string name="broadcast_receiver">Chapter05/BroadCastReceiver/02</string>
    <string name="title_activity_main">Chapter05/Notification</string>
    <string name="service">Chapter06/Service/Started</string>
    <string name="binding_service">Chapter06/Service/BindingService</string>
    <string name="messenger_service">Chapter06/Service/MessengerService</string>
    <string name="progressbar1">Chapter06/Progress Bar/1. Incremental</string>
    <string name="progressbar2">Chapter06/Progress Bar/2. Smooth</string>
    <string name="AsynTask01">Chapter06/AsyncTask/Test01</string>
    <string name="AsynTask02">Chapter06/AsyncTask/Test02</string>
    <string name="AsynTask_Download">Chapter06/AsyncTask/Download</string>
    <string name="Handler">Chapter06/Handler/Test01</string>
    <string name="TestHandlersDriver">Chapter06/Handler/Test02</string>
    <string name="Thread">Chapter06/Thread</string>
    <string name="processLifecycle">Chapter06/ProcessLifecycle</string>
    <string name="search_product_api">Chapter06/SearchProducts</string>
    <string name="download02">Chapter06/Download/DownloadManager</string>
    <string name="preferences_default">Chapter07/Preferences/DefaultPreference</string>
    <string name="preferences_multi">Chapter07/Preferences/MultiPreference</string>
    <string name="preferences_demo">Chapter07/Preferences/DemoPreference</string>
    <string name="SharedPreferences">Chapter07/Preferences/SharedPreferences</string>
    <string name="UserDictionaryProvider">Chapter07/Content Provider/UserDictionaryProvider</string>
    <string name="QuickContacts">Chapter07/Content Provider/QuickContacts</string>
    <string name="SQLite">Chapter07/SQLite</string>
    <string name="show_product">Chapter07/ShowProduct</string>
    <string name="multiTouch_motionEvent_demo01">Chapter08/MotionEvent/Demo1</string>
    <string name="multiTouch_motionEvent_demo02">Chapter08/MotionEvent/Demo2</string>
    <string name="multiTouch_motionEvent_intercept">Chapter08/MotionEvent/Intercept</string>
    <string name="multiTouch_motionEvent_test01">Chapter08/MotionEvent/Test01</string>
    <string name="multiTouch_motionEvent_test02">Chapter08/MotionEvent/Test02</string>
    <string name="multiTouch_motionEvent_velocityTracker">Chapter08/MotionEvent/VelocityTracker</string>
    <string name="multiTouch_drag_drop_demo">Chapter08/DragDrop</string>
    <string name="multiTouch_drag_touch_demo">Chapter08/TouchDrag</string>
    <string name="multiTouch_multi_touch">Chapter08/MultiTouch</string>
    <string name="multiTouch_scale_detector">Chapter08/Gesture/ScaleDetector</string>
    <string name="prefTitle">My Preferences</string>
    <string name="prefSummary">Set Flight Option Preferences</string>
    <string name="flight_sort_option_default_value">1</string>
    <string name="dialogTitle">Choose Flight Options</string>
    <string name="listSummary">Set Search Options</string>
    <string name="listTitle">Flight Options</string>
    <string name="selected_flight_sort_option">selected_flight_sort_option</string>
    <string name="create_xml_dom">使用DOM创建XML</string>
    <string name="create_xml_pull">使用PULL创建XML</string>
</resources>