<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/lunch"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/breakfast"
            android:text="@string/radio_group_1_breakfast" />

        <RadioButton
            android:id="@id/lunch"
            android:text="@string/radio_group_1_lunch" />

        <RadioButton
            android:id="@+id/dinner"
            android:text="@string/radio_group_1_dinner" />

        <RadioButton
            android:id="@+id/all"
            android:text="@string/radio_group_1_all" />

        <TextView
            android:id="@+id/choice"
            android:text="@string/radio_group_1_selection" />
    </RadioGroup>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_group_1_clear" />

</LinearLayout>