<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/xml/mypreferences.xml -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="flight_option_preference"
    android:summary="@string/prefSummary"
    android:title="@string/prefTitle" >

    <ListPreference
        android:defaultValue="@string/flight_sort_option_default_value"
        android:dialogTitle="@string/dialogTitle"
        android:entries="@array/flight_sort_options"
        android:entryValues="@array/flight_sort_options_values"
        android:key="@string/selected_flight_sort_option"
        android:summary="@string/listSummary"
        android:title="@string/listTitle" />

    <PreferenceScreen
        android:key="flight_columns_pref"
        android:summary="Set Columns for Search Results"
        android:title="Flight Search Preferences" >
        <CheckBoxPreference
            android:key="show_airline_column_pref"
            android:summary="Show Airline column"
            android:title="Airline" />
        <CheckBoxPreference
            android:key="show_departure_column_pref"
            android:summary="Show Departure column"
            android:title="Departure" />
        <CheckBoxPreference
            android:key="show_arrival_column_pref"
            android:summary="Show Arrival column"
            android:title="Arrival" />
        <CheckBoxPreference
            android:key="show_total_travel_time_column_pref"
            android:summary="Show Total Travel Time column"
            android:title="Total Travel Time" />
        <CheckBoxPreference
            android:key="show_price_column_pref"
            android:summary="Show Price column"
            android:title="Price" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="package_name_screen"
        android:summary="Set package name"
        android:title="Package Name" >
        <EditTextPreference
            android:dialogTitle="Package Name"
            android:key="package_name_preference"
            android:summary="Set the package name for generated code"
            android:title="Set Package Name" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="ringtone_option_preference"
        android:summary="Set Ring Tone Preference"
        android:title="Ringtones" >
        <RingtonePreference
            android:key="ring_tone_pref"
            android:ringtoneType="ringtone"
            android:showSilent="true"
            android:summary="Set Ringtone"
            android:title="Set Ringtone Preference" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="using_screens_in_root_screen"
        android:summary="Using Preference Categories in Nested Screens"
        android:title="Organizing Preferences" >
        <PreferenceScreen
            android:key="meats_screen"
            android:summary="Preferences related to Meats"
            android:title="Meats" >
            <CheckBoxPreference
                android:key="fish_selection_pref"
                android:summary="Fish is great for the healthy"
                android:title="Fish" />
            <CheckBoxPreference
                android:key="chicken_selection_pref"
                android:summary="A common type of poultry"
                android:title="Chicken" />
            <CheckBoxPreference
                android:key="lamb_selection_pref"
                android:summary="Lamb is a young sheep"
                android:title="Lamb" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="vegi_screen"
            android:summary="Preferences related to vegetable"
            android:title="Vegetables" >
            <CheckBoxPreference
                android:key="tomato_selection_pref"
                android:summary="It&apos;s actually a fruit"
                android:title="Tomato" />
            <CheckBoxPreference
                android:key="potato_selection_pref"
                android:summary="My favorite vegetable"
                android:title="Potato" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="using_categories_in_root_screen"
        android:summary="Using Stacked Categories in one Screen"
        android:title="Organizing Preferences" >
        <PreferenceCategory
            android:key="meats_category"
            android:summary="Preferences related to Meats"
            android:title="Meats" >
            <CheckBoxPreference
                android:key="fish_selection_pref"
                android:summary="Fish is great for the healthy"
                android:title="Fish" />
            <CheckBoxPreference
                android:key="chicken_selection_pref"
                android:summary="A common type of poultry"
                android:title="Chicken" />
            <CheckBoxPreference
                android:key="lamb_selection_pref"
                android:summary="Lamb is a young sheep"
                android:title="Lamb" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="vegi_category"
            android:summary="Preferences related to vegetable"
            android:title="Vegetables" >
            <CheckBoxPreference
                android:key="tomato_selection_pref"
                android:summary="It&apos;s actually a fruit"
                android:title="Tomato " />
            <CheckBoxPreference
                android:key="potato_selection_pref"
                android:summaryOff="Yeah!"
                android:summaryOn="My favorite vegetable"
                android:title="Potato" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceCategory android:title="Alerts" >
        <CheckBoxPreference
            android:key="alert_email"
            android:title="Send email?" />

        <EditTextPreference
            android:dependency="alert_email"
            android:key="alert_email_address"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="Email Address" />
    </PreferenceCategory>

</PreferenceScreen>